# gDel3D

./: CMakeLists.txt
GDelFlipping/src/gDel3D/GPU/: KerPredicates.cu
